--- a/book_eu/06.md
+++ b/book_eu/06.md
@@ -1,11 +1,11 @@
 # Salbuespenak
 
-Baliteke dagoeneko programazioan bikaina izatea. Baina, hala ere, zure programek huts egiten jarrai dezakete, gauza batzuk zure programaren kontroletik kanpo daudelako eta zure programak funtzionatzeari uzten diolako.
+Baliteke programazioan bikaina izatea. Baina, hala ere, zure programek huts egiten jarrai dezakete, gauza batzuk zure programaren kontroletik kanpo daudelako. Beraz, nahiz eta zure programa zuzena izan, gauzak oker joan daitezke.
 
-Adibidez, zure programak erabiltzaileak zenbaki bat idaztea espero badu, baina erabiltzaileak letrak idazten baditu edo ezer idazten ez badu, zure programak huts egingo du.
+Adibidez, zure programak erabiltzaileari zenbaki bat idaztea eskatzen badio, baina erabiltzaileak letrak idazten baditu edo ezer idazten ez badu, zure programak huts egingo du.
 Zure programak fitxategi bat irakurri behar badu, baina fitxategi hori existitzen ez bada, zure programak huts egingo du.
 Zure programak sarera konektatu behar badu, baina zure ordenagailua konektatuta ez badago, zure programak huts egingo du.
-Ikus dezakezunez, egoera batzuetan programak ezin du kontrolik izan. Zorionez, badugu mekanismo bat aukera ematen diguna saio horietako bat gertatzen bada gure programak huts egin ez dezan eta besterik gabe amai dadin. Eta mekanismo hori salbuespenak dira.
+Ikus dezakezunez, egoera batzuetan programak ezin du kontrolik izan. Zorionez, badugu mekanismo bat aukera ematen diguna gauza horietako bat gertatzen bada gure programak huts egin ez dezan eta besterik gabe amai dadin. Eta mekanismo hori salbuespenak dira.
 
 ## Salbuespenak Python-en
 
@@ -28,7 +28,7 @@ balioa = int (balioa)
 ValueError: invalid literal for int () with base 10: 'x'
 ```
 
-Salbuespen baten bidez, programak huts egitea ekidin dezakegu, eta gutxienez erabiltzaileari errore-mezu bat erakutsi. Salbuespena hizkuntzaren egitura bat gehiago da, eta forma hau du:
+Salbuespen baten bidez, programak huts egitea ekidin dezakegu, eta gutxienez erabiltzaileari errore mezu bat erakutsi. Salbuespena lengoaiaren egitura bat gehiago da, eta forma hau du:
 
 ```python
 try:
@@ -37,7 +37,7 @@ exception:
   huts_egitean_gertatzen_dena
 ```
 
-Ikus dezagun aurreko adibidea, salbuespen-blokearen barruan kode sentikorra babestuz:
+Ikus dezagun aurreko adibidea, salbuespen blokearen barruan huts egin dezakeen kodea babestuz:
 
 ```python
 balioa = input ("Sartu zenbaki bat:")
@@ -59,12 +59,12 @@ Errorea datua bihurtzean!
 
 Halaber, programa hobetu ahal izango litzateke, balioa berriro eskatzeko eta ez amaitzeko.
 
-Errore motaren araberako salbuespen espezifikoak daude, eta errore-mezu espezifikoagoa erakusteko erabil daitezke.
+Errore motaren araberako salbuespen espezifikoak daude, eta errore-mezu zehatzagoa erakusteko erabil daitezke.
 
-# Fitxategiak maneiatzea
+# Fitxategien kudeaketa
 
 Orain arte datu gutxi erabili ditugu, erabiltzaileak pantaila bidez idazten duena edo aldagaietan daukaguna. Baina datu kopuru handiagoak erabili nahi baditugu, fitxategietan irakurri eta idatz dezakegu.
-Era guztietako fitxategiak daude: testua, multimedia (musika, bideoa) eta fitxategi bitarrak. Horiek guztiak programa batetik erabil daitezke. Sarrera gisa, ikus dezagun nola erabil ditzakegun testu-fitxategiak.
+Era guztietako fitxategiak daude: testua, multimedia (musika, bideoa) eta fitxategi bitarrak. Horiek guztiak programa batetik erabil daitezke. Sarrera gisa, ikus dezagun nola erabil ditzakegun testu fitxategiak.
 
 ## Fitxategien irakurketa
 
@@ -72,19 +72,19 @@ Fitxategi bat irakurri ahal izateko, alde batetik fitxategi hori egon behar da, 
 Kode honetan, programaren leku berean dagoen fitxategi bat irakurtzen da:
 
 ```python
-fitxategia = open("texto.txt", "r")
-edukia = fichero.read()
+fitxategia = open("testua.txt", "r")
+edukia = fitxategia.read()
 print(edukia)
-fichero.close()
+fitxategia.close()
 ```
 
 Kontuan hartzekoak:
 
-- Fitxategia irakurtzeko, lehenik eta behin ireki egin behar da, honako honekin:
-- Fitxategia irekitzean, haren izena adierazi behar da, eta, beste direktorio batean badago, harako bidea. Fitxatzeko karpetan egonez gero, hau izango litzateke bidea: `fichero/texto.txt`.
-- "r" parametroak adierazten du fitxategia irakurtzeko moduan bakarrik irakurtzen dugula.
+- Fitxategia irakurtzeko, lehenik eta behin ireki egin behar da, honako honekin: `open("testua.txt", "r")`
+- Fitxategia irekitzean, haren izena adierazi behar da, eta, beste direktorio batean badago, fitxategiaren _path_ edo "bidea". Adibidez `Testuak` izeneko karpetan egonez gero, hau izango litzateke bidea: `Testuak/testua.txt`.
+- `"r"` parametroak adierazten du fitxategia irakurketa moduan bakarrik irakurtzen dugula.
 
-Testu-fitxategia horrelako zerbait izan liteke, eta programak hori bera erakutsiko luke pantailan.
+Testu fitxategia horrelako zerbait izan liteke, eta programak hori bera erakutsiko luke pantailan.
 
 ```console
 Hau testu bat da
@@ -93,26 +93,26 @@ Eta irakur daiteke
 oso erraz
 ```
 
-## Lerroz lerro irakurtzen?
+## Lerroz-lerro irakurtzen?
 
-Aurreko adibidean, bat-batean irakurri dugu fitxategiaren eduki osoa, testu-aldagai batean gordeta. Baina batzuetan, baliteke online fitxategia irakurri nahi izatea. Horretarako, honako funtzio hau erabili behar dugu:
+Aurreko adibidean, bat-batean irakurri dugu fitxategiaren eduki osoa, testu aldagai batean gordeta. Baina batzuetan, baliteke fitxategia lerroz-lerro  irakurri nahi izatea. Horretarako, honako funtzio hau erabili behar dugu:
 
 ```python
-fitxategia = open("texto.txt", "r")
-lineak = fichero.readline()
-for linea in lineak:
-  print (linea)
+fitxategia = open("testua.txt", "r")
+lerroak = fitxategia.readline()
+for lerroa in lerroak:
+  print (lerroa)
 
-fichero.close ()
+fitxategia.close ()
 ```
 
 ## JSON fitxategiak
 
-Aurrekoa bezalako testu-fitxategi sinpleek informazioa izan dezakete, baina ez dira programa baterako oso datu erabilgarriak. Programa batek erraz manipulatu ditzakeen datuak irakurri edo gorde nahi baditugu, formatu jakin bat erabiltzea komeni da.
-Programazioko formatu ezagunenetako bat JSON formatua da. Python-en hiztegi-egituren antza duen formatua da. Hizkuntzarenak bezalako zerrendak irudikatzeko aukera ere badu.
+Aurrekoa bezalako testu fitxategi sinpleek informazioa izan dezakete, baina ez dira programa baterako oso datu erabilgarriak. Programa batek erraz manipulatu ditzakeen datuak irakurri edo gorde nahi baditugu, formatu jakin bat erabiltzea komeni da.
+Programazioko formatu ezagunenetako bat JSON formatua da. Python-en hiztegi egituren antza duen formatua da. Python lengoaiaren zerrendak bezala ere irudikatzeko aukera badu.
 
 Hurrengo edukia JSON formatuan dago. Hainbat objektu dituen zerrenda da.
-Erreparatzen badiozu, JSON* motako objektuak Python-eko hiztegien berdinak dira!*
+Fija zaitez, JSON *motako objektuak Python-eko hiztegien berdinak dira!*:
 
 ```python
 [
@@ -130,13 +130,13 @@ Fitxategi horren edukia automatikoki kargatu ahal izango dugu aldagai batean. Ho
 ```python
 import json
 
-fitxategia = open ("texto.json", "r")
-edukia = json.load (fitxategia)
+fitxategiarea = open("testua.json", "r")
+edukia = json.load(fitxategiarea)
 
-for edukirik gabeko pertsonaia:
-  print (pertsonaia ["izena"])
+for pertsonaia in edukia:
+    print(pertsonaia["izena"])
 
-fitxategia.close ()
+fitxategiarea.close()
 ```
 
 Pantaila batetik, hau ikusiko dugu:
@@ -147,23 +147,23 @@ Neko
 Bug
 ```
 
-## Fitxategien eskritura
+## Fitxategien idazketa
 
 Fitxategiak idazteko, prozesua antzekoa da, baina bi gauza egin behar ditugu:
 
 - Fitxategia idazkera moduan irekitzea.
-- Erabili `writee 'funtzioa edukia idazteko.
+- Erabili `write` funtzioa edukia idazteko.
 
 Kode honekin, testu-lerro pare bat idatziko ditugu fitxategian:
 
 ```python
-fitxategia = open ("texto.txt", "w")
-fitxategia.write("Lerro bat\n idazten dut")
-fitxategia.write("Beste lerro bat idazten dut\n")
+fitxategia = ireki("testua.txt", "w")
+fitxategia.write("Idatzi lerro bat\n")
+fitxategia.write("Idatzi beste lerro bat\n")
 fitxategia.close()
 ```
 
-KONTUZ! Horrela idazten badugu, fitxategiaren edukia txikituko dugu.
+KONTUZ! Horrela idazten badugu, fitxategiaren edukia ezabatuko baitugu.
 Fitxategiaren edukia:
 
 ```console
@@ -171,13 +171,13 @@ Lerro bat idazten dut
 Beste lerro bat idazten dut
 ```
 
-Edukia gehituz idatzi nahi badugu, fitxategia "a" moduan ireki behar dugu:
+Edukia fitxategiaren amaieran gehitu nahi badugu, fitxategia `"a"` moduan ireki behar dugu:
 
 ```python
-fitxategia = open ("texto.txt", "a")
+fitxategia = open("testua.txt", "a")
 fitxategia.write("Gehitu lerro bat\n")
 fitxategia.write("Gehitu beste lerro bat\n")
-fitxategia.close ()
+fitxategia.close()
 ```
 
 Orain, fitxategiaren edukia hau izango litzateke:
@@ -189,33 +189,33 @@ Gehitu lerro bat
 Gehitu beste lerro bat
 ```
 
-## Fitxategi batean idatzi json
+## Fitxategi batean JSON idazten
 
-JSON formatuko fitxategi baten kasuan, kezkatzekoa da idazteko unean gure datuak testu bihurtzea.
-Zorionez, automatikoki egiten duen funtzio bat dago: `json.dumps ()
+JSON formatuko fitxategi baten kasuan, kontutan hartu behar da idazteko unean gure datuak testu bihurtu behar direla
+Zorionez, automatikoki egiten duen funtzio bat dago: `json.dumps()`
 
 Hurrengo adibidean, json fitxategi baten edukia aldagai baten barruan kargatzen da.
-Gero elementu bat gehituko diogu zerrenda horri. Fitxategia berriro irekiko dugu, idazkera moduan, eta `writee 'bat egingo dugu, `json.dumps, `erabiliz edukia testu bihurtzeko:
+Gero elementu bat gehituko diogu zerrenda horri. Fitxategia berriro irekiko dugu, idazkera moduan, eta `write` bat egingo dugu, `json.dumps` erabiliz edukia testu bihurtzeko:
 
 ```python
 import json
 
-fitxategia = open("texto.json", "r")
+fitxategia = open("testua.json", "r")
 edukia = json.load(fitxategia)
-fitxategia.close ()
+fitxategia.close()
 
-pertsonaia = {"id": 666, "izena": "Gumball"}
-edukia.append pertsonaia)
+pertsonaia = { "id": 666, "izena": "Gumball" }
+edukia.append(pertsonaia)
 
-fitxategia = open("texto.json", "w")
-fitxategia.write(json.dumps (edukia))
+fitxategia = open("testua.json", "w")
+fitxategia.write(json.dumps(edukia))
 fitxategia.close()
 ```
 
 # Liburutegiak
 
 Programak gero eta konplexuagoak diren heinean, litekeena da funtzio asko definitu behar izatea, edo diseinua klaseetan bereizi behar izatea, etab.
-Dena fitxategi berean eduki dezakegun arren, ez litzateke gure kodea antolatzeko modurik onena. Egokiena da klase bakoitza bere fitxategian bereiztea, eta funtzio edo funtzio-multzo bakoitza bere fitxategian.
+Dena fitxategi berean eduki dezakegun arren, ez litzateke gure kodea antolatzeko modurik onena. Egokiena da klase bakoitza bere fitxategian bereiztea, eta funtzio edo funtzio-multzo bakoitza bere fitxategian biltzea.
 
 Kodea fitxategietan eta karpetetan antolatu ondoren, beste fitxategi batzuetan berrerabil ditzakegu. Ikus dezagun adibide sinple bat.
 Funtzio hau definituko dugu `matematika.py` izeneko fitxategi batean:
@@ -231,7 +231,7 @@ Batuketa (a, b):
     return a - 1
 ```
 
-Orain, fitxategi hori beste programa batean sar dezakegu, `axola dio 'aginduaren bidez. Direktorio berean badaude, besterik gabe egin daiteke:
+Orain, fitxategi hori beste programa batean sar dezakegu, `import` aginduaren bidez. Direktorio berean badaude, besterik gabe egin daiteke:
 
 ```python
 import matematika
@@ -243,11 +243,11 @@ emaitza = matematika.batu(balio1, balio2)
 print(emaitza) # 15
 ```
 
-6.0 ariketa
+6.0 Ariketa
 
-Aurreko ekitaldi batean, pasahitzen sorgailu bat egitea proposatu zen. Erabili kode bera, baina sinetsi fitxategi baten barruan. Sortu beste fitxategi bat kode hori inportatzeko eta erabiltzeko.
+Aurreko ariketa batean, pasahitzen sorgailu bat egitea proposatu zen. Erabili kode bera, baina sar ezazu fitxategi baten barruan. Sortu beste fitxategi bat kode hori inportatzeko eta erabiltzeko.
 
-Generar.ete fitxategia:
+`sortu.py` fitxategia:
 
 ```python
 import random
@@ -268,7 +268,7 @@ def pasahitzaSortu (luzera):
     return pasahitza
 ```
 
-Eta 1 ETE fitxategian erabiltzen dugu:
+Eta fitxategian erabiltzen dugu:
 
 ```python
 import sortu
@@ -284,7 +284,7 @@ Emaitza:
 g3ep-ahx
 ```
 
-Klaseekin gauza bera egin daiteke. Demagun `PantailaIrakurgailua` izeneko klasea dugula `lector_pantalla.py`izeneko fitxategi batean. Kontsolatik datuak irakurtzeko aukera ematen digun klase bat da:
+Klaseekin gauza bera egin daiteke. Demagun `PantailaIrakurgailua` izeneko klasea dugula `pantaila_irakurgailua.py`izeneko fitxategi batean. Kontsolatik datuak irakurtzeko aukera ematen digun klase bat da:
 
 ```python
 class PantailaIrakurgailua:
@@ -315,15 +315,15 @@ Sartu zenbaki bat: 6
 7
 ```
 
-6.1 ariketa
+6.1 Ariketa
 
-Definitu `Menue izeneko klase bat, honako funtzio hauek dituena:
+Definitu `Menu` izeneko klase bat, honako funtzio hauek dituena:
 
-1. `def init__ (self)`: aukeren zerrenda bat (* strings*) jasotzen du parametro gisa.
-2. `def mostrar (self)`: aurretik zenbaki bat duen aukerak erakusten ditu, a print deituz.
-3. `def selecciono (self, numero)` Itzuli `True`, baldin eta aukeratutako zenbakia menuan badago; bestela, itzuli `False`.
+1. `def init__(self)`: aukeren zerrenda bat jasotzen du parametro gisa.
+2. `def erakutsi(self)`: aurretik zenbaki bat duen aukerak erakusten ditu, `print` deituz.
+3. `def hautatu (self, zenbakia)` Itzuli `True`, baldin eta aukeratutako zenbakia menuan badago; bestela, itzuli `False`.
 
-Gero klase hori 2.py fitxategian inportatu eta erabili.
+Gero klase hori 6.2.py fitxategian inportatu eta erabili.
 
 Fitxategia:
 
@@ -340,7 +340,7 @@ class Menu:
         return zenbakia > 0 and zenbakia <= len(self._aukerak)
 ```
 
-2.py fitxategia, programa nagusia:
+6.2.py fitxategia, programa nagusia:
 
 ```python
 import menu
@@ -365,7 +365,7 @@ Oraingo 1. aukera
 
 ## Proposatutako ariketak
 
-6.0 ariketa
+6.0 Ariketa
 
 Sortu `Fitxategia` izeneko klase bat, honako funtzio hauekin:
 
@@ -373,7 +373,7 @@ Sortu `Fitxategia` izeneko klase bat, honako funtzio hauekin:
 2. `def irakurri (self)`: fitxategiaren edukia jasotzen duen kate bat itzultzen du.
 3. `def idatzi (self, edukia)`: fitxategian parametro gisa pasatzen zaion edukia idazten du.
 
-Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
+Gero, liburutegi bezala erabili behar duzu beste fitxategi batean inportatuz.
 
 Fitxategia:
 
@@ -395,7 +395,7 @@ class Fitxategia:
       fitxategia.close()
 ```
 
-6.0.txt fitxategia, programa nagusia:
+6.0.py fitxategia, programa nagusia:
 
 ```python
 import fitxategia
@@ -421,14 +421,14 @@ Aurreko edukia: Eduki aldatua!!! 2020-08-18
 Edukia: Edukia aldatuta!!! 2020-08-23
 ```
 
-6.1 ariketa
+6.1 Ariketa
 
-Sor ezazu "Zerrenda" izeneko klase bat, honako funtzio hauekin:
+Sor ezazu `Zerrenda` izeneko klase bat, honako funtzio hauekin:
 
-1. `def __init__ (self, fitxategia): json fitxategi baten izena hartzen du parametrotzat, eta haren edukia zerrenda batean kargatu behar da. Zerrenda hori atributu gisa definituko da. Edukiak hiztegi-zerrenda bat izan behar du, «id» formatua duena: 1, «izena»: «Juan»}
-2. `def (self, izena) dago: itzuli egin behar duzu `True«/ `Faldea, parametro gisa pasatzen den izena zerrendan badago.
-3. `def aMinuskulak (self): zerrendako izen guztiak letra xeheetara pasatu behar dira.
-4. "def posicion (self, nombre)": izen hori dagoen posizioa itzuli behar duzu.
+1. `def __init__ (self, fitxategia)`: json fitxategi baten izena hartzen du parametrotzat, eta haren edukia zerrenda batean kargatu behar da. Zerrenda hori atributu gisa definituko da. Edukiak hiztegi-zerrenda bat izan behar du, formato honekin `[{"id": 1, "izena": "Juan"}, {...}]
+2. `def (self, izena)`: `True` ala `False` itzuli parametro gisa pasatzen den `izena` zerrendan badago.
+3. `def xehetu (self)`: zerrendako izen guztiak letra xeheetara pasatu behar dira.
+4. `def posizioa (self, nombre)`: izen hori dagoen posizioa itzuli behar duzu.
 
 Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
 
@@ -438,33 +438,32 @@ Zerrenda fitxategia:
 import json
 
 class Zerrenda:
-  def __init__ (self, nombreFichero):
-      contenido = open(nombreFichero, "r")
-      self._datos = json.load(contenido)
-      contenido.close()
+    def __init__ (self, fitxategiIzena):
+        contenido = open(fitxategiIzena, "r")
+        self._datuak = json.load(contenido)
+        contenido.close()
 
-  def existitzenDa (self, izena):
-      for datu in self._datos:
-          if datu["izena"] == izena:
-              return True
+    def existitzenDa (self, izena):
+        for datu in self._datuak:
+            if datu["izena"] == izena:
+                return True
 
-      return False
+        return False
 
-  def minuskulatuta (self):
-      self._datos = list(map(lambda datu: { "id": datu["id"], "izena": datu["izena"].lower() }, self._datos))
+    def xehetu (self):
+        self._datuak = list(map(lambda datu: { "id": datu["id"], "izena": datu["izena"].lower() }, self._datuak))
 
-  def posizioa (self, izena):
-      i = 0
-      for datu in self._datos:
-          if datu["izena"] == izena:
-              return i
-          i += 1
-      return -1
+    def posizioa (self, izena):
+        i = 0
+        for datu in self._datuak:
+            if datu["izena"] == izena:
+                return i
+            i += 1
+        return -1
 
-  def inprimatu (self):
-      for datu in self._datos:
-          print(datu)
-
+    def inprimatu (self):
+        for datu in self._datuak:
+            print(datu)
 ```
 
 6.1 fitxategia, programa nagusia:
@@ -472,13 +471,13 @@ class Zerrenda:
 ```python
 import zerrenda
 
-nire_zerrenda = zerrenda.inprimatu("6.1.json")
+nire_zerrenda = zerrenda.inprimatu("4.json")
 
 badaude = nire_zerrenda.existitzenDa("eugene")
 if badaude:
     print("Dago!")
 
-nire_zerrenda.minuskulatuta()
+nire_zerrenda.xehetu()
 nire_zerrenda.print()
 
 badaude = nire_zerrenda.existitzenDa("eugene")
@@ -488,7 +487,7 @@ if badaude:
     print(posizioa)
 ```
 
-`6.1.json«fitxategia:
+`6.1.json` fitxategia:
 
 ```javascript
 [
@@ -517,19 +516,19 @@ Badago!
 1
 ```
 
-6.2 ariketa
+6.2 Ariketa
 
-Sor ezazu `Tareas«izeneko klase bat, honako funtzio hauekin:
+Sor ezazu `Zereginak` klase bat, honako funtzio hauekin:
 
-1- `def __init__ (self)` «Tareas.json» izeneko fitxategia ireki behar duzu, eta honako formatu hau izango duten hiztegiak zerrenda batean kargatu: {id: 1, ataza: «Ikasi zerbait»}. Zerrenda hori atributua izango da.
+1- `def __init__ (self)` `zereginak.json` izeneko fitxategia ireki behar duzu, eta honako formatu hau izango duten hiztegiak zerrenda batean kargatu: `{"id": 1, "zeregina"": "Ikasi zerbait"}`. Zerrenda hori atributua izango da.
 2- `def sortu (self, zeregina)`: objektu berri bat sortu eta zerrendan gordetzen du.
-3- `def eliminatu (self, id)`: ID horrek duen zerrendako ataza bat ezabatzen du.
-4- `def guardar (self)`: gorde zerrenda fitxategi honetan.json.
-5- `def mostrar (self)`: string batean itzultzen ditu ataza guztiak.
+3- `def ezabatu (self, id)`: ID horrek duen zerrendako zeregina bat ezabatzen du.
+4- `def gorde (self)`: gorde zerrenda `zeregina.json` fitxategian.
+5- `def erakutsi (self)`: string batean itzultzen ditu zeregin guztiak.
 
-Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
+Gero, klasea erabili behar duzu beste fitxategi batean inportatuz.
 
-Fitxategia: `tareas.py`
+Fitxategia: `zereginak.py`
 
 ```python
 import json
@@ -550,12 +549,12 @@ class Zereginak:
       fitxategia.close()
 
   def ezabatu(self, id):
-      self._zereginak = list(filter(lambda dato: dato["id"] != id, self._zereginak))
+      self._zereginak = list(filter(lambda datua: datua["id"] != id, self._zereginak))
 
   def erakutsi (self):
       emaitza = ""
-      for dato in self._zereginak:
-          emaitza += json.dumps(dato) + "\n"
+      for datua in self._zereginak:
+          emaitza += json.dumps(datua) + "\n"
 
       return emaitza
 
@@ -579,7 +578,7 @@ nireZereginak = zereginak.Tareas()
 
 print(nireZereginak.erakutsi(), "\n---")
 
-nireZereginak.sortu(2, "Eskatzak")
+nireZereginak.sortu(2, "Gehiago ikasi")
 print(nireZereginak.erakutsi(), "\n---")
 
 nireZereginak.ezabatu(2)
@@ -617,28 +616,28 @@ Emaitza:
 - --
 ```
 
-6.3 ariketa
+6.3 Ariketa
 
-Sor ezazu `Jugadora 'izeneko klase bat, eta eduki hau izango du:
+Sor ezazu `Jokalaria` izeneko klase bat, eta eduki hau izango du:
 
-1. `def __init__ (self, izena, dortsala)`: parametroak esleitzen dizkie `_izena_eta `_dorsal, atributuei.
-2. Get/set metodoak izenerako eta dortserako '.
-3. `def info (self)`:* string* bat itzultzen du jokalariaren informazioarekin.
+1. `def __init__ (self, izena, zenbakia)`: parametroak esleitzen dizkie `_izena` eta `_zenbakia`, atributuei.
+2. Get/set metodoak izenerako eta dortserako.
+3. `def info (self)`: *string* bat itzultzen du jokalariaren informazioarekin.
 
-Sor ezazu `Ekipola 'izeneko klase bat, eta eduki hau izango du:
+Sor ezazu `Taldea` izeneko klase bat, eta eduki hau izango du:
 
-1. `def cargar (self)` «Jokalari» izeneko fitxategi bat ireki behar duzu. Fitxategi horrek jokalari-hiztegien zerrenda bat izango du [{izena: "Pele", dortsala: 10}, {).
+1. `def karga(self)`:  `jokalariak.json` izeneko fitxategi bat ireki behar duzu. Fitxategi horrek jokalari-hiztegien zerrenda bat izango du [{"izena": "Pele", "dortsala": 10}, {).
 Eta fitxategiaren objektu bakoitzeko, "JUgadora" motako instantzia bat sortu behar duzu, eta `this._jugadores`izeneko zerrenda batean sartu.
 2. `def erakutsi (self)`: jokalarien zerrenda osoa erakutsi behar duzu.
 3. `def fitxaketa (self, izena, dortsala)`: jokalari berri bat sartu behar duzu zerrendan," JUgadora "ren instantzia bat sortuz.
 
 Ikasgelan, `Jugadora` klasea inportatu beharko duzu, erabili ahal izateko.
 
-`jokalari.txt` 'fitxategia:
+`jokalaria.py` 'fitxategia:
 
 ```python
 class Jokalaria:
-  def __init__ (self, izena, dorsal):
+  def __init__ (self, izena, zenbakia):
       self._izena = izena
       self._zenbakia = zenbakia
 
@@ -662,7 +661,7 @@ class Jokalaria:
       return self._izena + " " + str(self._zenbakia)
 ```
 
-TXTen taldea fitxategia:
+`taldea.py` taldea fitxategia:
 
 ```python
 import json
@@ -675,7 +674,7 @@ class Taldea:
       print("Kargatuta:", jokalariak)
       self._jokalariak = []
       for j in jokalariak:
-          self._jokalariak.append(jokalaria.Jokalaria(j["izena"], j["dorsala"]))
+          self._jokalariak.append(jokalaria.Jokalaria(j["izena"], j["zenbakia"]))
 
   def fitxaketa(self, izena, dorsala):
       fitxategiBerria = jokalaria.Jokalaria(izena, dorsala)
@@ -686,22 +685,22 @@ class Taldea:
           print(jokalaria.toString())
 ```
 
-Jokalarien fitxategia:
+`jokalariak.json` jokalarien fitxategia:
 
 ```python
 [
     {
         "izena": "Maradona",
-        "dorsala": 10
+        "zenbakia": 10
     },
     {
         "izena": "Pele",
-        "dorsala": 8
+        "zenbakia": 8
     }
 ]
 ```
 
-`6.3 TXT` fitxategia, programa nagusiarekin:
+`6.3.py` fitxategia, programa nagusiarekin:
 
 ```python
 import taldea
@@ -717,7 +716,7 @@ nireTaldea.inprimatu()
 Emaitza:
 
 ```console
-Loaded: [{'dortsal': 10, 'nombre': 'Maradona'}, {'dorsal': 8, 'nombre': 'Pele'}]
+Loaded: [{'zenbakia': 10, 'izena': 'Maradona'}, {'zenbakia': 8, 'izena': 'Pele'}]
 Maradona 10
 Pele 8
 Maradona 10
