--- a/book_eu/07.md
+++ b/book_eu/07.md
@@ -2,37 +2,38 @@
 
 Python-i buruz
 
-Zergatik aukeratu dugu Python? Bere bertute ugariengatik. Hizkuntza interpretatua da, sintaxi oso erraza duena, eta horrek ikasteko oso erraza egiten du. Ez da kezkatu behar (asko) hizkuntzaren mota eta zurruntasunez. Kontuan hartu behar dugun bakarra bloke bakoitzeko tabulazioak errespetatzea da.
+Zergatik aukeratu dugu Python? Bere abantaila ugariengatik. Lengoai interpretatua da, sintaxi oso erraza duena, eta horrek ikasteko oso erraza egiten du. Ez da kezkatu behar (ez asko behintzat) datu motaz. Kontuan hartu behar dugun bakarra: bloke bakoitzeko tabulazioak errespetatzea da.
 
-Helburua ez da hizkuntza bere horretan ikastea, funtsezkoa programatzen ikastea da, eta Pythonek zeregin hori errazten du.
+Hala ere, ez da ahaztu behar helburua ez dela programazio lengoai hau ikastea, baizik eta programazioaren funtsak ikastea; eta Pythonek zeregin hori errazten du.
 
-Gainera, oso hizkuntza erabilgarria da, oso hedatua eta profesionalki erabilia. Hori gutxi balitz, garatzaileek asko estimatzen dute, eta horrek kodea, liburu-dendak eta laguntza ematen duten pertsonen komunitate izugarria dakar.
+Gainera, oso lengoai erabilgarria da, oso hedatua eta profesionalki erabilia. Hori gutxi balitz, programatzaileek asko estimatzen dute, eta horrek kodea, liburutegi mordoa eta elkar laguntzen duten pertsonen komunitate izugarria dakar.
 
-Pythonek bi bertsio berezi ditu, 2 eta 3. Liburu honetan 3. sintaxia eta estiloa erabiltzen saiatu gara, egunean gehien dagoena erabiltzeagatik.
+Pythonek bi bertsio berezi ditu, 2 eta 3. Liburu honetan 3. sintaxia eta estiloa erabiltzen saiatu gara, egunean gehien dagoena erabiltzeagatik eta 2 bertsioa desagertzen ari delako.
 
-Python tokian-tokian instalatzen
+## Python zure ordenadorean instalatzen
+
+Web bidez landu badaiteke, baina nahi baduzu zure ordenagailuan instalatu, hemen duzu nola egin.
 Nahikoa da [python site] ra joatea (https://www.python.org) eta 3. bertsioaren instalatzailea deskargatzea. Instalazioa pixka bat aldatzen da zure sistemaren arabera, baina, funtsean, honako hau litzateke:
 
 - Windows: instalatzailea deskargatu, exekutatu eta urrats bakoitza berretsi.
 - Mac: berdin-berdin.
-- Linux: ziur aski seriean instalatuta izango duzu, edo, beharbada, ez duzu zertan esan nola instalatu;)
+- Linux: ziur aski seriean instalatuta izango duzu, edo, beharbada, ez duzu azalpenik behar ;)
 
 ## Kode editoreak
 
 Koderako editore bat erabili nahi baduzu, aukera asko dituzu, baina honako hauek nabarmenduko ditugu:
 
 - [pycharm] (http://www.jetbrains.com/pycharm /) Editore profesionala eta doakoa.
-- [atom] (https://atom.io /)
 - [code] (https://vscode.io)
 - [pydev] (http://pydev.org)
 - [sublime] (http://www.sublimetext.com)
 
 ## Test unitarioak
 
-Unitate-testak funtzioak ondo eginda daudela egiaztatzen duten programak dira. Funtsean, funtzioak betetzen dituzten eta emaitza zuzena dela egiaztatzen duten programak dira.
-Testak egiteko hainbat liburu-denda daude, nahiz eta Python-en `unittest 'lehenetsia dagoen, eta, beraz, ez dago ezer instalatu beharrik.
+Test unitarioak kodea ondo eginda daudela egiaztatzen duten programak dira. Funtsean, funtzioak emaitza zuzena dela egiaztatzen duten programak dira.
+Testak egiteko hainbat liburutegi daude, baina Python-en `unittest` lehenetsia dago, eta, beraz, ez dago ezer instalatu beharrik.
 
-Demagun kalkulagailu bat irudikatzen duen klase hau dugula:
+Demagun kalkulagailu bat errepresentatzen duen klase hau dugula:
 
 ```python
 class Kalkulagailua:
@@ -49,8 +50,8 @@ class Kalkulagailua:
     return a/b
 ```
 
-Mota horretako test unitarioak egiteko, nahikoa litzateke beste mota hau sortzea, eta hori `unittestere 'liburu-dendako testa-mota baten oinordekoa izango litzateke. Kalkulagailua bera ere inportatu behar dugu, proban jarri behar baitugu.
-Gelako funtzio bakoitzak kalkulagailuaren funtzio bakoitza egiaztatzen du. Nahi adina test egin daitezke, funtzioek behar dutena egiten dutela frogatzeko. Ikus dezakezunez, test bakoitzak funtzio bat exekutatzen du funtsean, eta emaitza esperotakoa dela egiaztatzen du, honako hau erabiliz:
+Mota horretako test unitarioak egiteko, nahikoa litzateke beste mota hau sortzea, eta hori `unittest` liburutegiaren testa-mota baten oinordekoa izango litzateke. `Kalkulagailua` bera ere inportatu behar dugu, proban jarri behar baitugu.
+Klaseko funtzio bakoitzak kalkulagailuaren funtzio bakoitza egiaztatzen du. Nahi adina test egin daitezke, funtzioek behar dutena egiten dutela frogatzeko. Ikus dezakezunez, test bakoitzak funtzio bat exekutatzen du funtsean, eta emaitza esperotakoa dela egiaztatzen du, honako hau erabiliz:
 
 ```python
 def test_batu (self):
@@ -58,28 +59,28 @@ def test_batu (self):
   self.assertEqual(kal.batu(40, 2), 42)
 ```
 
-Fitxategi `kalkulatzailea.test.ete:
+Fitxategi `kalkulatzailea.test.py:
 
 ```python
 import unittest
 import kalkulagailua
 
 class TestStringMethods(unittest.TestCase):
-    def test_batura(self):
+    def test_batu(self):
         kal = kalkulagailua.Kalkulagailua()
-        self.assertEqual(kal.batura(40, 2), 42)
+        self.assertEqual(kal.batu(40, 2), 42)
 
-    def test_restar(self):
+    def test_kendu(self):
         kal = kalkulagailua.Kalkulagailua()
         self.assertEqual(kal.kendu(40, 2), 38)
 
-    def test_multiplicar(self):
+    def test_biderkatu(self):
         kal = kalkulagailua.Kalkulagailua()
-        self.assertEqual(c.biderkatu(40, 2), 80)
+        self.assertEqual(kal.biderkatu(40, 2), 80)
 
-    def test_dividir(self):
+    def test_zatitu(self):
         kal = kalkulagailua.Kalkulagailua()
-        self.assertEqual(c.zatitu(40, 2), 20)
+        self.assertEqual(kal.zatitu(40, 2), 20)
 
 if __name__ == '__main__':
     unittest.main()
@@ -97,14 +98,14 @@ Ran 4 test in 0.000s
 OK
 ```
 
-## Python proiektu bati hasiera ematen tokian-tokian
+## Python proiektu bati hasiera
 
-Python proiektu bat hasteko modu gomendagarri bat izango litzateke `virtualenv, `pakete kudeatzailearekin instalatuko dugun pakete `birtuala 'erabiltzea, gure sistema edozein dela ere funtziona dezakeen proiektu-karpeta bat sortzeko. Hori dela eta, proiektua malguagoa eta beste ordenagailu batzuk eramateko errazagoa da.
+`virtualenv` Python proiektu bat hasteko modu gomendagarri bat izango litzateke: gure sistema edozein dela ere funtziona dezakeen proiektu-karpeta bat sortzeko. Hori dela eta, proiektua malguagoa eta beste ordenagailu batzuk eramateko errazagoa da.
 
 Komando hauek sistemaren kontsolan idatzi beharko dituzu.
 
 ```console
-pip3 instalatu birtualenv
+pip3 install birtualenv
 Defaulting to user installation because normal site-packages is not writeable
 Collecting virtualenv
 Downloading virtualenv-20.0.31-py2.py3-none-any.whl (4.9 MB)
@@ -113,20 +114,20 @@ Collecting distlib < 1, > = 0.3.1
 ...
 ```
 
-Birtualenvekin proiektu berri bat sor dezakegu:
+`virtualenv` proiektu berri bat sor dezakegu:
 ```console
-birtualenv proiektua
+virtualenv proiektua
 ```
 
-Eta horrek "proiektatua" izeneko karpeta sortuko du.
+Eta horrek `proiektua` izeneko karpeta sortuko du.
 Jarraian, proiektuaren ingurune birtuala aktibatu behar dugu, honako hauek gauzatuz:
 
 ```console
 source proiektua/bin/activate
 ```
 
-Orain, iturri-kodea gehitu dezakegu edo dependentziak instalatu.
-Horretarako, `requirements.txtere 'izeneko testu-fitxategi bat sortzea komeni da. Fitxategi horrek formatu hau izan behar du:
+Orain, kodea gehitu dezakegu edo dependentziak instalatu.
+Horretarako, `requirements.txt` izeneko testu-fitxategi bat sortzea komeni da. Fitxategi horrek formatu hau izan behar du:
 
 ```console
 #Bertsio zehatz bat instalatzeko
@@ -139,14 +140,14 @@ Horretarako, `requirements.txtere 'izeneko testu-fitxategi bat sortzea komeni da
 #pakete_izena
 ```
 
-Adibidez, pygame eta testing pakete bat instalatu nahi baditugu, honako hauek jar ditzakegu:
+Adibidez, `pygame` eta testing pakete bat instalatu nahi baditugu, honako hauek jar ditzakegu:
 
 ```console
 pygame = 1.9.6
 unittest
 ```
 
-Eta gero pakete hori eta beste batzuk instalatu genitzake, komandoarekin adierazten ditugunak:
+Eta gero pakete hori eta beste batzuk instalatu genitzake, pip3 pakete kudeatzailerarekin:
 
 ```console
 source bin/activate
@@ -171,7 +172,7 @@ setuptools 49.6.0
 wheel 0.35.1
 ```
 
-Eta `freeze, `requirements.txt«fitxategian gordeko dugu:
+Eta `freeze` erbiliz, pakeeteak `requirements.txt` fitxategian gordeko dugu:
 
 ```console
 pip3 freeze > requirements.txt
@@ -216,6 +217,9 @@ python3 game.py
 ```
 
 Eta Python-en ingurune birtuala amaitzeko, nahikoa litzateke:
+
 ```
 deactivate
 ```
+
+Oharra: `pygame` Python lengoaiarekin bideojokoak garatzeko liburutegia da.
